[package]
name = "solana-bls"
description = "Solana BLS"
documentation = "https://docs.rs/solana-bls"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bytemuck = { workspace = true, optional = true }
cfg_eval = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, features = ["macros"], optional = true }
solana-frozen-abi = { version = "2.2.1", optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { version = "2.2.1", optional = true, features = [
    "frozen-abi",
] }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
blst = { workspace = true }
blstrs = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
solana-signature = { version = "2.2.1", optional = true }
solana-signer = { version = "2.2.1", optional = true }
subtle = { workspace = true, optional = true }

[dev-dependencies]
bincode = { workspace = true }
solana-keypair = { workspace = true }

[features]
bytemuck = ["dep:bytemuck"]
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
serde = ["dep:cfg_eval", "dep:serde", "dep:serde_with"]
solana-signer-derive = [
    "dep:solana-signer",
    "dep:solana-signature",
    "dep:subtle",
]

[lib]
crate-type = ["rlib"]

[lints]
workspace = true
