[package]
name = "solana-decode-error"
description = "Solana DecodeError Trait"
documentation = "https://docs.rs/solana-decode-error"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
num-traits = { workspace = true }

[dev-dependencies]
num-derive = { workspace = true }
