[package]
name = "solana-logger"
description = "Solana Logger"
documentation = "https://docs.rs/solana-logger"
version = "2.2.2"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
env_logger = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
signal-hook = { workspace = true }

[lib]
name = "solana_logger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
