[package]
name = "solana-sdk-ids"
description = "Solana SDK IDs"
documentation = "https://docs.rs/solana-sdk-ids"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-pubkey = { workspace = true, default-features = false }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
