[package]
name = "solana-sdk-macro"
description = "Solana SDK Macro"
documentation = "https://docs.rs/solana-sdk-macro"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
bs58 = { workspace = true, features = ["alloc"] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
