[package]
name = "solana-time-utils"
description = "`std::time` utilities for Solana"
documentation = "https://docs.rs/solana-time-utils"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
