[package]
name = "solana-validator-exit"
description = "Solana validator exit handling."
documentation = "https://docs.rs/solana-validator-exit"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
